--- a/shows.html
+++ b/shows.html
@@ -19,6 +19,9 @@
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico">
 
+  <!-- Broadcast Theme -->
+  <link rel="stylesheet" href="/broadcast.css">
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
