--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico">
 
+  <!-- Broadcast Theme -->
+  <link rel="stylesheet" href="/broadcast.css">
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
