--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   <title>Contact · Terry Cole Podcast Studio</title>
 
   <!-- ===== Open Graph / Social Preview ===== -->
@@ -15,133 +16,12 @@
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Contact · Terry Cole Podcast Studio">
-  <meta name="twitter:description" content="Get in touch regarding audio projects, archival materials, and broadcast history connected to the Terry Cole Podcast Studio.">
-  <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
 
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico">
 
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-                   Roboto, Helvetica, Arial, sans-serif;
-      margin: 0;
-      background: #ffffff;
-      color: #111;
-      line-height: 1.65;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 32px 24px;
-    }
-
-    /* ===== HEADER ===== */
-    .site-header {
-      margin-bottom: 40px;
-    }
-
-    .branding {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      margin-bottom: 12px;
-    }
-
-    .site-logo {
-      width: 64px;
-      height: auto;
-    }
-
-    .site-title h1 {
-      margin: 0;
-      font-size: 20px;
-      font-weight: 700;
-    }
-
-    .site-parent {
-      margin: 2px 0 0;
-      font-size: 14px;
-      color: #555;
-    }
-
-    .site-nav a {
-      text-decoration: none;
-      color: #555;
-      margin-right: 14px;
-      font-size: 15px;
-    }
-
-    .site-nav a.active {
-      color: #8b0000;
-      font-weight: 600;
-    }
-
-    /* ===== CONTENT ===== */
-    h2 {
-      font-size: 28px;
-      margin-top: 0;
-    }
-
-    .rule {
-      border-bottom: 3px solid #8b0000;
-      margin: 18px 0 32px;
-    }
-
-    p {
-      max-width: 760px;
-    }
-
-    h3 {
-      font-size: 1.35rem;
-      color: #8b0000;
-      margin-top: 44px;
-    }
-
-    ul {
-      padding-left: 22px;
-      margin-top: 14px;
-    }
-
-    .callout {
-      background: #f7f7f7;
-      border-left: 5px solid #8b0000;
-      padding: 22px 26px;
-      margin: 36px 0;
-    }
-
-    footer {
-      margin-top: 70px;
-      padding-top: 20px;
-      border-top: 1px solid #ccc;
-      font-size: 0.85rem;
-      color: #555;
-    }
-
-    /* ===== MOBILE ===== */
-    @media (max-width: 640px) {
-      .branding {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 8px;
-      }
-
-      .site-logo {
-        width: 72px;
-      }
-
-      .site-title h1 {
-        font-size: 18px;
-      }
-
-      .site-parent {
-        font-size: 13px;
-      }
-    }
-  </style>
+  <!-- Broadcast Theme -->
+  <link rel="stylesheet" href="/broadcast.css">
 </head>
 
 <body>
@@ -150,13 +30,20 @@
   <!-- ===== HEADER ===== -->
   <header class="site-header">
     <div class="branding">
-      <img
-        src="/logo.jpg"
-        alt="Terry Cole Podcast Studio logo"
-        class="site-logo"
-      />
+      <a href="/">
+        <img
+          src="/logo.jpg"
+          alt="Terry Cole Podcast Studio logo"
+          class="site-logo"
+        />
+      </a>
+
       <div class="site-title">
-        <h1>Terry Cole Podcast Studio</h1>
+        <h1>
+          <a href="/" style="text-decoration:none;color:inherit;">
+            Terry Cole Podcast Studio
+          </a>
+        </h1>
         <p class="site-parent">
           Part of the Terry Cole Broadcast &amp; Recording Studio
         </p>
@@ -176,7 +63,7 @@
     <h2>Contact</h2>
     <div class="rule"></div>
 
-    <p>
+    <p style="max-width:760px;">
       The Terry Cole Podcast Studio welcomes inquiries related to audio projects,
       archival materials, and broadcast history.
     </p>
@@ -184,27 +71,75 @@
     <h3>📬 Get in Touch</h3>
 
     <div class="callout">
-      <strong>Website</strong><br>
-      <a href="https://terrycolepodcaststudio.com">
-        https://terrycolepodcaststudio.com
-      </a>
-      <br><br>
-      <strong>Email</strong><br>
-      <a href="mailto:bhamblin@terrycolepodcaststudio.com">
-        bhamblin@terrycolepodcaststudio.com
-      </a>
+      <form
+        action="mailto:bhamblin@terrycolepodcaststudio.com"
+        method="post"
+        enctype="text/plain"
+      >
+
+        <p>
+          <label>
+            <strong>Name</strong><br>
+            <input
+              type="text"
+              name="Name"
+              required
+              style="width:100%;max-width:420px;"
+            >
+          </label>
+        </p>
+
+        <p>
+          <label>
+            <strong>Email</strong><br>
+            <input
+              type="email"
+              name="Email"
+              required
+              style="width:100%;max-width:420px;"
+            >
+          </label>
+        </p>
+
+        <p>
+          <label>
+            <input type="checkbox" name="Response Requested" value="Yes">
+            I would like a response to this message
+          </label>
+        </p>
+
+        <p>
+          <label>
+            <strong>Message</strong><br>
+            <textarea
+              name="Message"
+              rows="5"
+              required
+              style="width:100%;max-width:620px;"
+            ></textarea>
+          </label>
+        </p>
+
+        <p>
+          <button type="submit">
+            Send Message
+          </button>
+        </p>
+      </form>
     </div>
 
     <h3>🎙️ Submissions &amp; Inquiries</h3>
 
-    <p>If you have:</p>
+    <p>Please reach out if you have:</p>
     <ul>
       <li>Historical recordings or broadcast materials related to Terry Cole</li>
       <li>Information supporting preservation of radio history</li>
       <li>Questions about existing audio projects</li>
     </ul>
 
-    <p>Please reach out by email. All messages are reviewed.</p>
+    <p>
+      Messages are reviewed with care. Responses are provided when requested.
+    </p>
 
     <h3>📍 Location</h3>
     <p>
