--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
   <title>Terry Cole Podcast Studio</title>
 
   <!-- ===== Open Graph / Social Preview ===== -->
@@ -23,30 +22,132 @@
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico">
 
-  <!-- ===== Global Broadcast Theme ===== -->
+  <!-- ===== Broadcast Theme CSS (ROOT) ===== -->
   <link rel="stylesheet" href="/broadcast.css">
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      margin: 0;
+      background: #ffffff;
+      color: #111;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 32px 24px;
+    }
+
+    .site-header {
+      margin-bottom: 40px;
+    }
+
+    .branding {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 12px;
+    }
+
+    .site-logo {
+      width: 64px;
+      height: auto;
+    }
+
+    .site-title h1 {
+      margin: 0;
+      font-size: 20px;
+      font-weight: 700;
+    }
+
+    .site-parent {
+      margin: 2px 0 0;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .site-nav a {
+      text-decoration: none;
+      color: #555;
+      margin-right: 14px;
+      font-size: 15px;
+    }
+
+    .site-nav a.active {
+      color: #8b0000;
+      font-weight: 600;
+    }
+
+    h2 {
+      font-size: 28px;
+      margin-top: 0;
+    }
+
+    .rule {
+      border-bottom: 3px solid #8b0000;
+      margin: 12px 0 24px;
+    }
+
+    .callout {
+      border-left: 4px solid #8b0000;
+      background: #f7f7f7;
+      padding: 16px 20px;
+      margin: 32px 0;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    footer {
+      margin-top: 60px;
+      padding-top: 20px;
+      border-top: 1px solid #ccc;
+      font-size: 14px;
+      color: #555;
+    }
+
+    @media (max-width: 640px) {
+      .branding {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 8px;
+      }
+
+      .site-logo {
+        width: 72px;
+      }
+
+      .site-title h1 {
+        font-size: 18px;
+      }
+
+      .site-parent {
+        font-size: 13px;
+      }
+    }
+  </style>
 </head>
 
 <body>
   <div class="container">
 
-    <!-- ===== HEADER (CANONICAL) ===== -->
     <header class="site-header">
       <div class="branding">
-        <a href="/">
-          <img
-            src="/logo.jpg"
-            alt="Terry Cole Podcast Studio logo"
-            class="site-logo"
-          />
-        </a>
-
+        <img
+          src="/logo.jpg"
+          alt="Terry Cole Podcast Studio logo"
+          class="site-logo"
+        />
         <div class="site-title">
-          <h1>
-            <a href="/">
-              Terry Cole Podcast Studio
-            </a>
-          </h1>
+          <h1>Terry Cole Podcast Studio</h1>
           <p class="site-parent">
             Part of the Terry Cole Broadcast &amp; Recording Studio
           </p>
@@ -61,7 +162,6 @@
       </nav>
     </header>
 
-    <!-- ===== MAIN CONTENT ===== -->
     <main>
       <h2>Preserving Broadcast Legacy</h2>
       <div class="rule"></div>
@@ -105,14 +205,11 @@
       </p>
     </main>
 
-    <!-- ===== FOOTER ===== -->
     <footer>
       <p>
         <em>Broadcast legacy. Recorded with care.</em><br>
         Studio updates and related materials are occasionally shared on
-        <a href="https://www.facebook.com/TerryColePodcastStudio"
-           target="_blank"
-           rel="noopener">
+        <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
           Facebook
         </a>.
       </p>
