--- a/about.html
+++ b/about.html
@@ -19,121 +19,17 @@
   <meta name="twitter:description" content="Learn about the Terry Cole Podcast Studio and its mission to preserve broadcast legacy through podcasts and recorded storytelling.">
   <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
 
-  <!-- Broadcast Theme -->
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico">
+
+  <!-- ===== Broadcast Theme CSS ===== -->
   <link rel="stylesheet" href="/broadcast.css">
-
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-                   Roboto, Helvetica, Arial, sans-serif;
-      margin: 0;
-      background: #ffffff;
-      color: #111;
-      line-height: 1.6;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 32px 24px;
-    }
-
-    /* ===== HEADER ===== */
-    .site-header {
-      margin-bottom: 40px;
-    }
-
-    .branding {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      margin-bottom: 12px;
-    }
-
-    .site-logo {
-      width: 64px;
-      height: auto;
-    }
-
-    .site-title h1 {
-      margin: 0;
-      font-size: 20px;
-      font-weight: 700;
-    }
-
-    .site-parent {
-      margin: 2px 0 0;
-      font-size: 14px;
-      color: #555;
-    }
-
-    /* Navigation */
-    .site-nav a {
-      text-decoration: none;
-      color: #555;
-      margin-right: 14px;
-      font-size: 15px;
-    }
-
-    .site-nav a.active {
-      color: #8b0000;
-      font-weight: 600;
-    }
-
-    /* Headings */
-    h2 {
-      font-size: 28px;
-      margin-top: 0;
-    }
-
-    .rule {
-      border-bottom: 3px solid #8b0000;
-      margin: 12px 0 24px;
-    }
-
-    .callout {
-      border-left: 4px solid #8b0000;
-      background: #f7f7f7;
-      padding: 16px 20px;
-      margin: 32px 0;
-    }
-
-    footer {
-      margin-top: 60px;
-      padding-top: 20px;
-      border-top: 1px solid #ccc;
-      font-size: 14px;
-      color: #555;
-    }
-
-    /* Mobile */
-    @media (max-width: 640px) {
-      .branding {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 8px;
-      }
-
-      .site-logo {
-        width: 72px;
-      }
-
-      .site-title h1 {
-        font-size: 18px;
-      }
-
-      .site-parent {
-        font-size: 13px;
-      }
-    }
-  </style>
 </head>
 
 <body>
   <div class="container">
 
-    <!-- HEADER -->
+    <!-- ===== HEADER (IDENTICAL TO HOMEPAGE) ===== -->
     <header class="site-header">
       <div class="branding">
         <img
@@ -157,7 +53,7 @@
       </nav>
     </header>
 
-    <!-- MAIN CONTENT -->
+    <!-- ===== MAIN CONTENT ===== -->
     <main>
       <h2>About the Studio</h2>
       <div class="rule"></div>
@@ -193,7 +89,7 @@
       </p>
     </main>
 
-    <!-- FOOTER -->
+    <!-- ===== FOOTER ===== -->
     <footer>
       <p>
         <em>Broadcast legacy. Recorded with care.</em><br>
