--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 
   <title>Contact · Terry Cole Podcast Studio</title>
 
-  <!-- Open Graph -->
+  <!-- ===== Open Graph ===== -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Contact · Terry Cole Podcast Studio">
   <meta property="og:description" content="Get in touch regarding audio projects, archival materials, and broadcast history.">
@@ -20,30 +20,23 @@
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico">
 
-  <!-- Broadcast Theme -->
+  <!-- ===== Broadcast Theme CSS ===== -->
   <link rel="stylesheet" href="/broadcast.css">
 </head>
 
 <body>
 <div class="container">
 
-  <!-- ===== HEADER (IDENTICAL TO HOME) ===== -->
+  <!-- ===== HEADER (SOURCE-OF-TRUTH HEADER) ===== -->
   <header class="site-header">
     <div class="branding">
-      <a href="/">
-        <img
-          src="/logo.jpg"
-          alt="Terry Cole Podcast Studio logo"
-          class="site-logo"
-        />
-      </a>
-
+      <img
+        src="/logo.jpg"
+        alt="Terry Cole Podcast Studio logo"
+        class="site-logo"
+      />
       <div class="site-title">
-        <h1>
-          <a href="/" style="text-decoration:none;color:inherit;">
-            Terry Cole Podcast Studio
-          </a>
-        </h1>
+        <h1>Terry Cole Podcast Studio</h1>
         <p class="site-parent">
           Part of the Terry Cole Broadcast &amp; Recording Studio
         </p>
@@ -58,7 +51,7 @@
     </nav>
   </header>
 
-  <!-- ===== MAIN ===== -->
+  <!-- ===== MAIN CONTENT ===== -->
   <main>
     <h2>Contact</h2>
     <div class="rule"></div>
